--- a/js/react/for_beginners/index.html
+++ b/js/react/for_beginners/index.html
@@ -8,12 +8,14 @@
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+
   </head>
   <body>
 
-    <h2>Add React in One Minute</h2>
-    <p>This page demonstrates using React with no build tooling.</p>
-    <p>React is loaded as a script tag.</p>
+    <div id="root">
+    </div>
+
+    <script src="app.js"></script>
 
   </body>
 </html>
