--- a/js/react/for_beginners/index.html
+++ b/js/react/for_beginners/index.html
@@ -8,6 +8,7 @@
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js" crossorigin></script>
 
   </head>
   <body>
@@ -15,7 +16,7 @@
     <div id="root">
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js" type='text/babel'></script>
 
   </body>
 </html>
