--- a/js/react/for_beginners/index.html
+++ b/js/react/for_beginners/index.html
@@ -10,13 +10,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/15.6.1/react-dom.js" crossorigin></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js" crossorigin></script>
 
+    <link rel="stylesheet" href="source/app.css">
+
   </head>
   <body>
 
     <div id="root">
     </div>
 
-    <script src="js/app.js" type='text/babel'></script>
+    <script src="source/app.js" type='text/babel'></script>
 
   </body>
 </html>
