--- a/js/react/for_beginners/index.html
+++ b/js/react/for_beginners/index.html
@@ -8,6 +8,7 @@
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.js" crossorigin></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/15.6.1/react-dom.js" crossorigin></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/EventEmitter/5.2.8/EventEmitter.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js" crossorigin></script>
 
     <link rel="stylesheet" href="source/app.css">
